# python-project-lvl1

./: .gitignore  Makefile  README.md  makefile  pyproject.toml
.github/workflows/: linter-flake8.yml  linter.yml
brain_games/: cli.py  engine.py  games.py
brain_games/games/: brain_calc.py  brain_calc_game.py  brain_even.py  brain_even_game.py  brain_gcd.py  brain_gcd_game.py  brain_prime.py  brain_prime_game.py  brain_progression.py  brain_progression_game.py  engine.py
brain_games/scripts/: brain_calc.py  brain_even.py  brain_games.py  brain_gcd.py  brain_prime.py  brain_progression.py
