[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = "Mind Games — a set of five console games built on the principle of popular mobile applications for brain pumping."
authors = ["denis <yudaev1@gmail.com>"]
packages = [
  { include = "brain_games" },
]
repository = "https://github.com/sound-round/python-project-lvl1.git"

[tool.poetry.dependencies]
python = "^3.8"
prompt = "^0.4.1"

[tool.poetry.dev-dependencies]
flake8 = "^3.8.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
brain-games = "brain_games.scripts.brain_games:main"
brain-even = "brain_games.scripts.brain_even:main"
brain-calc = "brain_games.scripts.brain_calc:main"
brain-gcd = "brain_games.scripts.brain_gcd:main"
brain-progression = "brain_games.scripts.brain_progression:main"
brain-prime = "brain_games.scripts.brain_prime:main"
